--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
     "chengbuilder": "file:",
     "react": "^19.0.0",
