--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "antd": "^5.24.6",
     "chengbuilder": "file:",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
